--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,7 @@
     "48":"img/icons-128.png"
   },
   "manifest_version":2,
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "name":"Akamai Developer Toolkit",
   "permissions":[
     "alarms",
@@ -36,12 +37,13 @@
     "contextMenus",
     "https://*/*",
     "http://*/*",
+    "chrome://net-internals/*",
     "proxy",
     "webRequest",
     "webRequestBlocking"
   ],
   "update_url":"https://clients2.google.com/service/update2/crx",
-  "version":"1.0.12",
+  "version":"1.0.13",
   "web_accessible_resources":[
     "fonts/*.*",
     "js/jquery-3.1.1.min.js",
