--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
     "48":"img/icons-128.png"
   },
   "manifest_version":2,
-  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com https://platform.twitter.com; object-src 'self'",
   "name":"Akamai Developer Toolkit",
   "permissions":[
     "alarms",
