add encryption, piez color scheme updated

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,11 @@
       "js/enc-base64.js",
       "js/sha256.js",
       "js/hmac-sha256.js",
+      "js/md5.js",
+      "js/evpkdf.js",
+      "js/cipher-core.js",
+      "js/aes.js",
+      "js/encdec.js",
       "js/common.js",
       "js/edgegrid.js",
       "js/background.js",
