--- a/manifest.json
+++ b/manifest.json
@@ -27,19 +27,19 @@
     ]
   },
   "browser_action":{
-    "default_icon":"img/icons-128.png",
-    "default_title":"Akamai Developer Toolkit"
+    "default_icon":"img/dev-icons-128.png",
+    "default_title":"Akamai Developer Toolkit - Canary Release"
   },
   "description":"A chrome extension that provide developers access to Akamai developer tools right within their workspace",
   "devtools_page": "/piez/devtools/devtools.html",
   "icons":{
-    "128":"img/icons-128.png",
-    "16":"img/icons-128.png",
-    "48":"img/icons-128.png"
+    "128":"img/dev-icons-128.png",
+    "16":"img/dev-icons-128.png",
+    "48":"img/dev-icons-128.png"
   },
   "manifest_version":2,
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com https://platform.twitter.com https://www.gstatic.com; object-src 'self'",
-  "name":"Akamai Developer Toolkit",
+  "name":"Akamai Developer Toolkit - Canary Release",
   "permissions":[
     "alarms",
     "notifications",
