--- a/manifest.json
+++ b/manifest.json
@@ -42,6 +42,7 @@
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com https://platform.twitter.com https://www.gstatic.com ; object-src 'self'",
   "name":"Akamai Developer Toolkit - Canary Release",
   "permissions":[
+    "idle",
     "alarms",
     "notifications",
     "tabs",
@@ -53,7 +54,6 @@
     "management",
     "https://*/*",
     "http://*/*",
-    "proxy",
     "webRequest",
     "webRequestBlocking"
   ],
