--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
       "js/edgegrid.js",
       "js/background.js",
       "js/endpoints.js",
+      "js/moment.js",
       "js/http-request.js",
       "js/google-analytics.js",
       "cmanager/cmanager-bg.js",
@@ -58,7 +59,7 @@
     "webRequestBlocking"
   ],
   "update_url":"https://clients2.google.com/service/update2/crx",
-  "version":"2.0.28",
+  "version":"2.0.30",
   "web_accessible_resources":[
     "fonts/*.*",
     "js/jquery-3.1.1.min.js",
