--- a/manifest.json
+++ b/manifest.json
@@ -56,10 +56,11 @@
     "https://*/*",
     "http://*/*",
     "webRequest",
-    "webRequestBlocking"
+    "webRequestBlocking",
+    "proxy"
   ],
   "update_url":"https://clients2.google.com/service/update2/crx",
-  "version":"2.0.31",
+  "version":"2.0.33",
   "web_accessible_resources":[
     "fonts/*.*",
     "js/jquery-3.1.1.min.js",
